--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -31,8 +31,10 @@
     "@nestjs/platform-express": "^10.2.0",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/throttler": "^6.4.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.0",
